--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytube==15.0.0
+pytubefix==7.4.0
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.34.0
